@@ -1,11 +1,11 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 4.8
+Version: 4.9
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
-Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, translation-ready
+Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: darkelements
@@ -67,7 +67,7 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; color:#ddd; line-height:1.5em; text-align:left; word-wrap:break-word;}
+body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; text-align:left; word-wrap:break-word;}
 #container {max-width:1000px; float:left; background:none; margin:20px 0 20px 20px;}
 
 
@@ -129,6 +129,7 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
 select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
+select option {background:#fff; color:#333;} 
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -143,21 +144,21 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR MENU */
-.nav-head {width:100%; clear:both; float:left; padding:5px 0;}
-.nav-head select {display:none;}
-.nav-head ul {padding:0; margin:0; z-index:999; list-style:none;}
-.nav-head ul li {list-style-type: none; position:relative; padding:0; margin:0;}
-.nav-head ul li a {text-decoration:none; padding:5px 0; display:inline-block; width:100%; border-bottom:1px solid #444;}
-.nav-head .current_page_item > a, .nav-head .current_page_parent > a {color:#e77776;}
+.nav-primary {width:100%; clear:both; float:left; padding:5px 0;}
+.nav-primary select {display:none;}
+.nav-primary ul {padding:0; margin:0; z-index:999; list-style:none;}
+.nav-primary ul li {position:relative; padding:0; margin:0;}
+.nav-primary ul li a {text-decoration:none; padding:5px 0; display:inline-block; width:100%; border-bottom:1px solid #444;}
+.nav-primary .current_page_item > a, .nav-primary .current_page_parent > a {color:#e77776;}
 
 
 /* SIDEBAR SUBMENU */
-.nav-head ul ul a {width:95%; margin:0 0 0 5%;}
-.nav-head ul ul ul a {width:90%; margin:0 0 0 10%;}
+.nav-primary ul ul a {width:95%; margin:0 0 0 5%;}
+.nav-primary ul ul ul a {width:90%; margin:0 0 0 10%;}
 
 
 /* SIDEBAR MENU TITLE */
-.nav-head-title {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.nav-primary-title {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
 
 
 /* WIDGETS */
@@ -186,7 +187,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 /* PAGE */
 .page-title {clear:both; padding:0 0 10px;}
 .archive-description {display:block; font-style:italic;}
-.pagelink {clear:both; display:block; margin:20px 0 10px;}
+.pagelink {clear:both; display:block; padding:20px 0 10px;}
 
 
 /* POST */
@@ -245,26 +246,29 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* COMMENTS */
 #comments {width:100%; clear:both; float:left;}
-.comment-list {background:none; border:1px solid #444; border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
-.comment-list ol {list-style:none;}
-.comment-list li {list-style:none; margin:0 0 0 10px;}
-.comment-body {border-left:1px solid #ddd; padding:0 0 0 15px; margin:20px 0;}
+.comment-list, .comment-list .children {list-style:none; margin:0; padding:0;}
+.comment-list li {margin:0; padding:0;}
+.comment-list .children > li {margin:0 0 0 10px;}
+.comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:20px 0;}
+.comment-content {margin:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
 
+
+/* COMMENTS RESPOND */
 #respond {width:100%; clear:both;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
 
 
-/* COMMENT NAV */
+/* COMMENTS NAV */
 .comment-nav {width:100%; clear:both; float:left; display:block;}
-.comment-prev {float:left; padding:5px 0;}
-.comment-next {float:right; padding:5px 0;}
+.comment-prev {float:left; padding:10px 0;}
+.comment-next {float:right; padding:10px 0;}
 
 
 /* FOOTER */
@@ -307,12 +311,12 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.logo h2 {padding:0; font-size:1.45em;}
 
 	/* SIDEBAR MENU */
-	.nav-head ul {display:none;} 
-	.nav-head {padding:0 0 10px;}
-	.nav-head select {display:block; width:100%; height:35px; margin:0 auto 0; font-size:1em; line-height:1.2em; color:#333; background:#ddd; border:0;}
+	.nav-primary ul {display:none;} 
+	.nav-primary {padding:0 0 10px;}
+	.nav-primary select {display:block; width:100%; height:35px; margin:0 auto 0; font-size:1em; line-height:1.2em; color:#333; background:#ddd; border:0;}
 
 	/* SIDEBAR MENU TITLE */
-	.nav-head-title {display:none;}
+	.nav-primary-title {display:none;}
 
 	/* WIDGETS */
 	.widget {padding:5px 0; margin:0 0 5px;}
