@@ -1,6 +1,16 @@
 CHANGELOG
 =========
 
+DarkElements version 4.9 - january 2017
+- some logical changes in class elements
+- files style, header and nav: changed .nav-head info .nav-primary
+- files style and header: changed .nav-head-title into .nav-primary-title
+- added support for hentry tags
+- updated files content-postmeta, content-list and single
+- file style: improved comments display
+- file custom-editor-style: removed theme colors (because theme can be customized)
+- several small adjustments
+
 DarkElements version 4.8 - october 2016
 - some logical changes in div and class elements
 - files style and header: changed #header into #sidebar
